--- a/doc/2019年底面经.md
+++ b/doc/2019年底面经.md
@@ -32,7 +32,7 @@
 
 ## 腾讯
 
-腾讯面试提前1天和提前一个小时都会发短信提示，这个特别贴心。去的腾讯滨海大厦面试，大楼的现代化程度很高，不过需要提醒一下的是，腾讯的滨海大厦分为南塔和北塔。我去的时候就上错楼了，需要下到4楼重新换成电梯。
+腾讯面试提前1天和提前一个小时都会发短信提示，这个还是很赞的。去的腾讯滨海大厦面试，大楼的现代化程度很高，不过需要提醒一下的是，腾讯的滨海大厦分为南塔和北塔。我去的时候就上错楼了，需要下到4楼重新换成电梯。
 
 ### 一面
 
@@ -70,7 +70,7 @@
 - 介绍一下缓存
 - 查看 CPU 的命令和磁盘 IO 的命令
 
-## 二面
+### 二面
 
 - 项目的系统架构画一下
 - 如果用户量上涨怎么优化
@@ -78,69 +78,58 @@
 - 背包问题
 - 贝叶斯的概率学原理
 - 分词算法
-- 连续整数求和(leetcode 第 829 题)
+- 连续整数求和(leetcode 第 829 题)，要求时间复杂度小于O(N)
+
+### 总结
+
+腾讯二面后就凉了，动态规划让写出递归公式，因为一直都是用动态规划表的思路来解题，所以这个地方没有答好。后面又问贝叶斯和分词算法，一点都不会。最后一道算法题没有写出来。这道题是leetcode hard级别的难度，所以没有刷。不过后面去看可能也没有那么难，只是这种通过数学公式的特点来解题往往容易被忽略了。总之，腾讯的一面算是中规中矩，二面确实让我有点手足无措。之前看网上的说法是腾讯算法题考的比较少，可能还是要分部门吧，我这次面试的是腾讯视频，二面基本上全是考算法。
 
 ## 字节跳动
 
 ### 一面
 
 - 问项目
-
 - 任务系统怎么保证任务完成后发奖一定成功
-
 - zset 延时队列怎么实现的
-
 - redis 数据结构有哪些？分别怎么实现的？
-
 - redis 的持久化
-
 - mysql 的索引
-
 - 一个无序数组找其子序列构成的和最大，要求子序列中的元素在原数组中两两都不相邻
 
 ### 二面
 
 - Redis 的 ZSET 怎么实现的？
 尽量介绍的全一点，跳跃表加哈希表以及压缩链表
-
 - Redis 的 ZSET 做排行榜时，如果要实现分数相同时按时间顺序排序怎么实现？
 说了一个将 score 拆成高 32 位和低 32 位，高 32 位存分数，低 32 位存时间的方法。问还有没有其他方法，想不出了
-
 - MySQL 事务的四个隔离级别？
 先说了四个级别的区别，然后说了每个级别可能产生的问题
-
 - binlog 日志和 redolog 日志清楚吗？
 说了两个日志的作用以及两阶段提交
-
 - C++ 的动态多态怎么实现的？
-
 - C++ 的构造函数可以是虚函数吗？
-
 - 缺失的第一个正数（leetcode第41题）
-
 - linux 系统里，一个被打开的文件可以被另一个进程删除吗？
-
 - 一个 10M 大小的 buffer 里存满了数据，现在要把这个 buffer 里的数据尽量发出去，可以允许部分丢包，问是用TCP好还是UDP好？为什么？
-
 - 一个完整的 HTTP 请求会涉及到哪些协议？
 
 ### 三面
 
 - 问项目
-
 - redis 的 ZSET 是怎么实现的？
-
-- 让你设计一个限流的系统怎么做
+- 让你设计一个限流的系统怎么做？
 令牌桶
-
 - 让你设计一个延时任务系统怎么做
 说了两个方案，一个是使用 redis 的 ZSET 来实现，考虑分片来抗高并发，使用 redis 的持久化来实现落地，使用 redis 的哨兵实现故障转移。
 一个是使用时间轮的方法。
+- 现有一个随机数生成器可以生成0到4的数，现在要让你用这个随机数生成器生成0到6的随机数，要保证生成的数概率均匀。
+- 有 N 枚棋子，每个人一次可以拿1到 M 个，谁拿完后棋子的数量为0谁就获胜。现在有1000颗棋子，每次最多拿8个，A 先拿，那么 A 有必胜的拿法吗？第一个人拿完后剩余棋子的数量是8的倍数就必胜，否则就必输。
+- 给出一棵二叉树的根节点，现在有这个二叉树的部分节点，要求这些节点最近的公共祖先。
 
-- 现有一个随机数生成器可以生成0到4的数，现在要让你用这个随机数生成器生成0到6的随机数，要保证生成的数概率均匀
+### 四面
 
-- 有 N 枚棋子，每个人一次可以拿1到 M 个，谁拿完后棋子的数量为0谁就获胜。现在有1000颗棋子，每次最多拿8个，A 先拿，那么 A 有必胜的拿法吗？
+HR 面
 
-- 给出一棵二叉树的根节点，现在有这个二叉树的部分节点，要求这些节点最近的公共祖先
+### 总结
 
-好像3面每个面试官都问了zset的实现，看来这里比较值得关注。
+头条4轮面试都是视频面的，视频面试体验其实还是挺好的，坐在家里面试我会更加放松一些，这样脑子也灵活一些。人一紧张脑子就转不动了。头条的3轮技术面都问了zset的实现，ZSET的实现可以好好看看源码怎么实现，这样说的时候有更多东西可以说，不是说一个跳跃表就完事了。还有一点就是遇到不会的逻辑题或者算法题不要放弃，问问面试官可不可以提示一下。如果能在面试官的慢慢提示下能完成这道题，也是会被认可的。
