--- a/experience/2019年底面经.md
+++ b/experience/2019年底面经.md
@@ -1,5 +1,35 @@
 # 2019年底面经
 
+今年年底开始萌生要看新机会的想法，主要的原因是觉得在目前的岗位上技术增长遇到的瓶颈，因此想去做一些更有挑战的工作。因为仍然准备继续在深圳工作，因此选定了三家公司，腾讯、字节跳动和 shopee，考虑的岗位方向仍然是后台开发（其他岗位也面不上呀，伤心一分钟）。虽然年底跳拿不到年终奖了，但是我觉得和自己个人整个职业生涯的发展比起来算不了什么，最好的时机永远是当下。
+
+## 准备
+
+敲定了方向和目标后就开始系统准备，主要分为以下几个方面来准备。
+
+### 算法题
+
+事先已经看过别人的社招面经知道头条每轮技术面都有算法题，而这一块平时练习的比较少，校招时刷的题也忘记了很多。因此系统复习的时候算法题还是花了比较多时间的。先是快速刷完了剑指 offer，这个校招时已经刷过两边了，因此现在刷起来会相对快一些。然后就是啃 LeetCode 的题了，LeetCode 的题比较多，想在短短几周内刷完基本是不可能的，因此我主要按照类型去刷，每个类型刷几道就会比较有感觉了。比如链表的题优先考虑递归和双指针来解决，栈和队列的题优先考虑用两个栈或队列来解决，树的题基本都是递归等。不过数组和字符串的题一般比较灵活，这种题只能尽量多刷了。平时要上班刷题也不方便，我采用的方法就是看题，用手机打开 LeetCode 的网站，看完题目后直接想解决方案，脑子里大概捋一下代码怎么写，能想到的就过，想不出的就看看别人的解法，用这个方法刷起来就很快。用这种方法你可能会担心面试时题写不完整，其实不用太担心，因为面试的时候面试官看你写的核心思路是正确的，边界处理是对的基本就过了，面试时间比较有限。
+
+### 理论基础
+
+基础这一块主要以快速复习为主，主要是语言（我主要用C++，所以复习C++）、操作系统和网络编程。校招这一块会问题的比较多，社招这一块问的比较少，但是如果这一块打不上来就比较尴尬了。语言就不说了，这一块大家应该都知道会考些什么，校招的时候毕竟都疯狂准备过。操作系统就看内存管理、进程管理和文件系统，一般虚拟内存问的多。网络编程这块就包括 TCP/IP 协议，HTTP协议，网络安全三个方面。TCP/IP主要就是三次握手，四次挥手，TIME_WAIT 的作用等这些常考的题了。HTTP 协议考察 HTTP 协议的返回码、HTTP 的方法等。需要特别指出的是 HTTPS 加密的详细过程要非常透彻，不然容易产生一种感觉好像都清楚了，但是一问就有点说不清楚。最后就是网络安全，主要考察也是 WEB 安全，包括XSS，CSRF，SQL注入等。
+
+### 后端技术
+
+这里的后端技术主要指工作中要用到的一些基础组件，一些常见的后端架构设计。主要准备了MySQL、Redis、消息队列、zookeeper、分布式系统架构设计和docker。MySQL 主要看了极客时间的 《MySQL 45讲》，关于事务、索引、锁以及 binlog 和 redolog 都讲的非常好，也是面试最爱考的，除此之外对数据库的读写分离、分库分表也要掌握。没有任何利益相关，决不是打广告。Redis 主要看了《Redis 的设计与实现》，然后自己再总结了一下 Redis 的使用场景，以及 Redis 实现分布式锁基本 Redis 就没有问题了。消息队列的开源软件比较多，我主要选择 Kafka 来学习，主要看官网文档，极客时间的《Kafka 核心技术与实战》，和一些技术文章等。不过极客时间的《Kafka 核心技术与实战》，我觉得讲的比较一般，不是很建议。分布式系统的就准备CAP理论、BASE理论、限流、熔断、一致性选举算法、主从架构、集群架构、异地多活、负载均衡、分层架构、微服务等。
+
+### 深挖项目
+
+没有参与开源项目的经验，工作中做的项目也很一般，项目这块我实在没什么太多拿的出手的，不过还是要挖掘一下，毕竟这一块是逃不掉。我说几个我思考的点吧：
+
+1. 找项目中相对而言具有亮点的地方。比如我用 redis 实现了一个延时队列，然后对这个延时队列我通过分片来解决瓶颈，通过分发来加快处理速度。可以看我的《基于REDIS实现延时任务》一文。这个虽然不是什么复杂技术，但是可以将其考虑全面可以展示出自己具有一定的架构能力。
+
+2. 找项目中复杂的地方。如果你做的项目中有复杂的地方，即使不是你做的，也可以拿来说，前提是你要搞得非常清楚来。
+
+3. 量化指标。一个接口原来有性能问题，比如你做了一个小的优化，将其 TP99 的耗时从原来的 500ms 优化至多少 200ms。
+
+4. 赋能整个团队。在开发业务的过程中肯定会遇到一些重复的工作，或者可以复用的服务。你可以开发了某个工具或者服务化了某个功能推广到了全组使用，给公司创造了价值。
+
 ## Shopee
 
 ### 一面
@@ -30,9 +60,13 @@
 - kafka partition broker consumer consumer group topic 等都是啥关系？
 - 两个单向链表，返回求和后的链表结构，例如2->3->1->5，和3->6，结果返回2->3->5->1
 
+### 二面
+
+二面没什么好说的，和面试聊人生去了，我以为是要凉的节奏，但是却拿到了offer。
+
 ## 腾讯
 
-腾讯面试提前1天和提前一个小时都会发短信提示，这个还是很赞的。去的腾讯滨海大厦面试，大楼的现代化程度很高，不过需要提醒一下的是，腾讯的滨海大厦分为南塔和北塔。我去的时候就上错楼了，需要下到4楼重新换成电梯。
+腾讯面试提前1天和提前一个小时都会发短信提示。去的腾讯滨海大厦面试，大楼的现代化程度很高，不过需要提醒一下的是，腾讯的滨海大厦分为南塔和北塔。我去的时候就上错楼了，需要下到4楼重新换成电梯。
 
 ### 一面
 
@@ -82,7 +116,7 @@
 
 ### 总结
 
-腾讯二面后就凉了，动态规划让写出递归公式，因为一直都是用动态规划表的思路来解题，所以这个地方没有答好。后面又问贝叶斯和分词算法，一点都不会。最后一道算法题没有写出来。这道题是leetcode hard级别的难度，所以没有刷。不过后面去看可能也没有那么难，只是这种通过数学公式的特点来解题往往容易被忽略了。总之，腾讯的一面算是中规中矩，二面确实让我有点手足无措。之前看网上的说法是腾讯算法题考的比较少，可能还是要分部门吧，我这次面试的是腾讯视频，二面基本上全是考算法。
+腾讯二面面完我就知道凉了。动态规划非要写出递推公式，因为我一直都是用动态规划表的思路来解题，所以这个地方没有答好。后面又问贝叶斯和分词算法，一点都不会（我的内心：我是来面后台的，又不是面算法的）。最后一道算法题只能想出 O(N) 复杂度的，面试官一定要小于 O(N) 的，答不上来。这道题是 leetcode hard 级别的难度，所以没有刷。不过后面去看可能也没有那么难，只是这种通过数学公式的特点来解题往往容易被忽略了。总之，腾讯的一面算是中规中矩，二面确实让我有点手足无措。之前看网上的说法是腾讯算法题考的比较少，可能还是要分部门吧，我这次面试的是腾讯视频，二面基本上全是考算法。还有大部分面经都说，算法题很少考 leetcode hard 级别，这个我也要表示怀疑了，因为腾讯和后面的头条都考了 hard 级别的。所以刷题时不能完全跳过 hard 级别的题。那有什么题不会考呢？我认为是描述起来很复杂的题面试时不会考，因为面试时间比较紧，如果光时把题看懂都要解释半天的，这种是不太会考的，比如那个 LeetCode 上买股票的题。
 
 ## 字节跳动
 
