--- a/experience/2019年底面经.md
+++ b/experience/2019年底面经.md
@@ -1,6 +1,6 @@
 # 2019年底面经
 
-今年年底开始萌生要看新机会的想法，主要的原因是觉得在目前的岗位上技术增长遇到的瓶颈，因此想去做一些更有挑战的工作。因为仍然准备继续在深圳工作，因此选定了三家公司，腾讯、字节跳动和 shopee，考虑的岗位方向仍然是后台开发（其他岗位也面不上呀，伤心一分钟）。虽然年底跳拿不到年终奖了，但是我觉得和自己个人整个职业生涯的发展比起来算不了什么，最好的时机永远是当下。
+虽然已经临近年末，但是还是萌生要看新机会的想法，主要的原因是觉得在目前的岗位上技术增长遇到的瓶颈，因此想去做一些更有挑战的工作。因为仍然准备继续在深圳工作，因此选定了三家公司，腾讯、字节跳动和 shopee，考虑的岗位方向仍然是后台开发（其他岗位也面不上呀，伤心）。虽然年底跳拿不到年终奖了，但是我觉得和自己个人整个职业生涯的发展比起来算不了什么，最好的时机永远是当下。
 
 ## 准备
 
@@ -22,7 +22,7 @@
 
 没有参与开源项目的经验，工作中做的项目也很一般，项目这块我实在没什么太多拿的出手的，不过还是要挖掘一下，毕竟这一块是逃不掉。我说几个我思考的点吧：
 
-1. 找项目中相对而言具有亮点的地方。比如我用 redis 实现了一个延时队列，然后对这个延时队列我通过分片来解决瓶颈，通过分发来加快处理速度。可以看我的《基于REDIS实现延时任务》一文。这个虽然不是什么复杂技术，但是可以将其考虑全面可以展示出自己具有一定的架构能力。
+1. 找项目中相对而言具有亮点的地方。比如我用 redis 实现了一个延时队列，然后对这个延时队列我通过分片来解决瓶颈，通过分发来加快处理速度。可以看我的![《基于REDIS实现延时任务》](https://github.com/oscarwin/blog/blob/master/%E5%9F%BA%E4%BA%8EREDIS%E5%AE%9E%E7%8E%B0%E5%BB%B6%E6%97%B6%E4%BB%BB%E5%8A%A1.md)一文。这个虽然不是什么复杂技术，但是可以将其考虑全面可以展示出自己具有一定的架构能力。
 
 2. 找项目中复杂的地方。如果你做的项目中有复杂的地方，即使不是你做的，也可以拿来说，前提是你要搞得非常清楚来。
 
@@ -63,6 +63,10 @@
 ### 二面
 
 二面没什么好说的，和面试聊人生去了，我以为是要凉的节奏，但是却拿到了offer。
+
+### 三面
+
+HR 面
 
 ## 腾讯
 
